--- a/caravan/style.css
+++ b/caravan/style.css
@@ -2,12 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #6c6b6b;
+}
+a {
+  text-decoration: none;
 }
 
-.header {
-  width: 100%;
-  height: 120px;
-  background-color: red;
+header {
+  width: 90%;
+  padding: 15px 0;
+  margin: 0 auto;
+  text-align: center;
+}
+header .heading {
+  font-size: 32px;
+}
+.nav-list {
+  text-align: center;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+.nav-list-item {
+  list-style: none;
+  display: inline-block;
+  margin: 0 20px;
 }
 
 .header-top {
@@ -51,8 +69,13 @@
   background-color: palegreen;
 }
 
-.footer {
+footer {
   width: 100%;
   height: 120px;
-  background-color: blue;
+  text-align: center;
+  line-height: 120px;
+  background-color: #848282;
+}
+.footer-text {
+  color: #fff;
 }
